<resources>
    <string name="app_name">P11RepasoSQLiteSergioMoreno</string>
    <string name="sCodigo">Codigo del producto</string>
    <string name="sDescripcion">Descripción del producto</string>
    <string name="sPrecio">Precio del producto</string>
    <string name="sColor">Color del producto</string>
    <string name="sRegistrar">Registrar</string>
    <string name="sBuscar">Buscar</string>
    <string name="sModificar">Modificar</string>
    <string name="sEliminar">Eliminar</string>
    <string name="sVisualizar">Visualizar</string>

    <!-- Activity 2 -->
    <string name="sAtras">Atras</string>

</resources>
